Deployment/openshift/yaml/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: cos-twas
  labels:
    app: cos-twas
spec:
  host: appmod-twas.app-ocp-prod.ibm-gse.jkwong.xyz
  to:
    kind: Service
    name: cos-twas
    weight: 100
  port:
    targetPort: 9443-tcp
  tls:
    termination: passthrough
  wildcardPolicy: None
